--- a/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj
+++ b/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj
@@ -79,6 +79,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -143,6 +145,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
