--- a/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj
+++ b/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoadShader.h" />
+    <ClInclude Include="mathHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
