--- a/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj.filters
+++ b/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="LoadShader.h">
       <Filter>原始程式檔</Filter>
     </ClInclude>
+    <ClInclude Include="mathHelper.h">
+      <Filter>原始程式檔</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
