--- a/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj.filters
+++ b/CPU/cpu_cube/cpu_cube/cpu_cube.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="LoadShader.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="LoadObj.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoadShader.h">
@@ -28,6 +31,9 @@
     </ClInclude>
     <ClInclude Include="mathHelper.h">
       <Filter>原始程式檔</Filter>
+    </ClInclude>
+    <ClInclude Include="LoadObj.h">
+      <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
