--- a/OpenCLStart/cpu_cube/cpu_cube/cpu_cube.vcxproj
+++ b/OpenCLStart/cpu_cube/cpu_cube/cpu_cube.vcxproj
@@ -21,7 +21,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{124D12B6-7EAE-4D19-8137-EEA41F7FC175}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>cpu_cube</RootNamespace>
+    <RootNamespace>opencl_cube</RootNamespace>
+    <ProjectName>OpenCL_CUBE</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -71,16 +72,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\lib\x64;D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\include;D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\lib\x64;D:\github\SpringMassSystem\CPU\cpu_cube\cpu_cube\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -108,7 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freeglutd.lib;glew32d.lib;OpenCL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -145,7 +146,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freeglut.lib;glew32.lib;OpenCL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -157,6 +158,7 @@
     <ClInclude Include="LoadObj.h" />
     <ClInclude Include="LoadShader.h" />
     <ClInclude Include="mathHelper.h" />
+    <ClInclude Include="vsync.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
