--- a/OpenCLStart/cpu_cube/cpu_cube/cpu_cube.vcxproj.filters
+++ b/OpenCLStart/cpu_cube/cpu_cube/cpu_cube.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="LoadObj.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="mathHelper.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoadObj.h">
